--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,5 +13,9 @@ layout: default
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
-  {% include disqus.html %}
+  <script src="https://utteranc.es/client.js"
+        repo="badel2/badel2.github.io"
+        issue-term="pathname"
+        async>
+  </script>
 </article>
